Thu Mar  4 21:45:43 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c: In list mode, set the background color 
	of the cell view to the base color of the style, instead of
	hardwiring white. (#136158)

Thu Mar  4 01:32:19 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkpathbar.c (gtk_path_bar_set_path): Modified patch from
	muppet <scott@asofyet.org> to keep child directories around if we
	change to a child.

	* gtk/gtkpathbar.c (_gtk_path_bar_set_home_icon): Start of
	icon-setting functions.  Not used yet.
	(_gtk_path_bar_set_root_icon): Ditto.
	
Thu Mar  4 00:31:54 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtktextview.c (extend_selection): 
	* gtk/gtktextview.c (gtk_text_view_move_cursor_internal): Allow
	to select the last word in the buffer.  (#135487, Paolo Borelli)

Wed Mar  3 23:54:31 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkentrycompletion.c: Doc update.

Wed Mar  3 17:30:18 2004  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.c (gtk_window_mnemonic_activate): Check
	whether widgets are viewable, not just if they are
	mapped. (#122912, reported by Tim Evans)

Wed Mar  3 23:28:48 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_set_active): Move the actual
	implementation into a new gtk_combo_box_set_active_internal() 
	function, which doesn't do the short-circuiting. 
	* gtk/gtkcombobox.c (gtk_combo_box_model_row_deleted): Use
	set_active_internal() here, since the active item may change here,
	although the index is unchanged.

Wed Mar  3 23:26:49 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_menu_position): Reintroduce the
	traditional option menu placement of the popup for regular combo
	boxes. Grids and editable combo boxes use the combo-like placement 
	below the entry.  (#136021)
	* gtk/gtkcombobox.c (gtk_combo_box_menu_button_press): 
	* gtk/gtkcombobox.c (gtk_combo_box_popup): Call gtk_menu_set_active()
	before popping up the menu, to make the placement work.